[package]
name = "m"
version = "0.3.34"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.2.1"
cli-daemon.workspace = true
clipboard = "0.5.0"
config = "0.13.2"
crossterm = "0.24.0"
dirs.workspace = true
futures-util.workspace = true
itertools = "0.10.3"
memchr.workspace = true
mlib = { path = "./mlib", default-features = true }
namespaced-tmp.workspace  = true
once_cell.workspace = true
rand = { version = "0.8.5", features = ["getrandom"] }
regex.workspace = true
reqwest = { version = "0.11.11", features = ["rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio-stream = { workspace = true, features = ["io-util"] }
tokio.workspace = true
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter", "fmt"] }
tracing.workspace = true
whoami.workspace = true

[workspace]
members = ["mlib", "cli-daemon"]

[workspace.dependencies]
async_once = "0.2.6"
cli-daemon = { path = "./cli-daemon" }
dirs = "4.0.0"
futures-util = "0.3.21"
memchr = "2.5.0"
once_cell = "1.13.0"
regex = "1.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tempfile = "3.3.0"
tokio-stream = { version = "0.1.9", features = ["io-util"] }
tracing = "0.1.36"
whoami = "1.2.1"

[workspace.dependencies.tokio]
version = "1.20.1"
default-features = false
features = ["macros", "rt-multi-thread", "rt", "parking_lot"]

[workspace.dependencies.namespaced-tmp]
git = "https://github.com/mendess/namespaced-tmp"
features = ["user"]
