[package]
name = "m"
version = "0.3.36"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.5"
cli-daemon.workspace = true
clipboard = "0.5.0"
config = "0.13.4"
crossterm = "0.27.0"
dirs.workspace = true
futures-util.workspace = true
itertools = "0.12.0"
memchr.workspace = true
mlib = { path = "./mlib", default-features = true }
namespaced-tmp.workspace  = true
once_cell.workspace = true
rand = { version = "0.8.5", features = ["getrandom"] }
regex.workspace = true
reqwest = { version = "0.11.23", features = ["rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio-stream = { workspace = true, features = ["io-util"] }
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }
tracing.workspace = true
whoami.workspace = true

[workspace]
members = ["mlib", "cli-daemon"]

[workspace.dependencies]
async_once = "0.2.6"
cli-daemon = { path = "./cli-daemon" }
dirs = "5.0.1"
futures-util = "0.3.30"
memchr = "2.6.4"
once_cell = "1.19.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.9.0"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
whoami = "1.4.1"

[workspace.dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["macros", "rt-multi-thread", "rt", "parking_lot"]

[workspace.dependencies.namespaced-tmp]
git = "https://github.com/mendess/namespaced-tmp"
features = ["user"]
