[package]
name = "m"
version = "0.3.60"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arboard = "3.4.1"
wl-clipboard-rs = "0.9.1"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
cli-daemon.workspace = true
config = "0.14.0"
crossterm = "0.27.0"
dirs.workspace = true
futures-util.workspace = true
itertools = "0.13.0"
memchr.workspace = true
mlib = { path = "./mlib", default-features = true }
namespaced-tmp.workspace  = true
once_cell.workspace = true
rand = { version = "0.8.5", features = ["getrandom"] }
regex.workspace = true
reqwest = { version = "0.12.4", features = ["rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio-stream = { workspace = true, features = ["io-util"] }
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }
tracing.workspace = true
whoami.workspace = true

[workspace]
members = ["mlib", "cli-daemon"]

[workspace.dependencies]
async_once = "0.2.6"
base64 = "0.22"
cli-daemon = { path = "./cli-daemon" }
derive_more = "1"
dirs = "5.0.1"
futures-util = "0.3.30"
memchr = "2.7.2"
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
static_assertions = "1.1.0"
tempfile = "3.10.1"
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
trait-gen = "0.3.2"
whoami = "1.5.1"

[workspace.dependencies.tokio]
version = "1.37.0"
default-features = false
features = ["macros", "rt-multi-thread", "rt", "parking_lot"]

[workspace.dependencies.namespaced-tmp]
git = "https://github.com/mendess/namespaced-tmp"
features = ["user", "async"]
