[package]
name = "cli-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
serde = "1.0.142"
serde_json = "1.0.83"
tracing = "0.1.36"
futures-util = "0.3.21"

[dependencies.namespaced-tmp]
git = "https://github.com/mendess/namespaced-tmp"
version = "1.0.0"
features = ["async", "user"]

[dependencies.tokio]
version = "1.20.1"
default-features = false
features = ["fs", "net", "sync", "time", "parking_lot", "rt", "io-util", "signal", "macros"]
