[package]
name = "cli-daemon"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures-util.workspace = true
namespaced-tmp = { workspace = true, features = ["async"] }

[dependencies.tokio]
workspace = true
features = ["signal", "sync", "time", "net"]
