[package]
name = "jukebox"
version = "0.1.0"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
once_cell = "1"
dns-lookup = "1"

[dependencies.tokio]
version = "0.2"
features = ["io-util", "io-std", "tcp", "process", "rt-core", "stream", "rt-threaded", "macros", "sync" ]
