[package]
name = "mlib"
version = "0.6.4"
edition = "2021"

[dependencies]
regex.workspace = true
once_cell.workspace = true

tracing = { workspace = true, optional = true }
cli-daemon = { workspace = true, optional = true }
thiserror = { version = "1.0.32", optional = true }
arc-swap = { version = "1.5.1", optional = true }
async_once = { workspace = true , optional = true }
csv-async = { version = "1.2.4", features = ["tokio"], optional = true }
dirs = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
glob = { version = "0.3.0", optional = true }
libmpv = { git = "https://github.com/sirno/libmpv-rs", optional = true, branch = "upgrade-libmpv" }
memchr = { workspace = true, optional = true }
namespaced-tmp = { workspace = true, optional = true }
parking_lot = { version = "0.12.1", optional = true }
pin-project = { version = "1.0.11", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tokio-stream = { workspace = true, features = ["fs", "io-util"], optional = true }
whoami = { workspace = true, optional = true }
url = { version = "2.4.0", features = ["serde"] }
form_urlencoded = { version = "1.2.0", default-features = false }
mpris-server = "0.4.2"
zbus = { version = "3.14.1", default-features = false }

[dependencies.tokio]
workspace = true
features = ["process"]
optional = true

[dev-dependencies]
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter", "fmt"] }
tracing-log = "0.1.3"

[dev-dependencies.tokio]
workspace = true
features = ["net", "fs", "process", "rt", "io-util", "macros", "rt-multi-thread"]

[[example]]
name = "observe"
required-features = ["player"]

[features]
default = ["ytdl", "player", "playlist", "queue", "downloads"]
ytdl = [
    "player",

    "dep:tokio",
    "dep:tokio-stream",
    "dep:pin-project",
    "dep:futures-util",
    "dep:serde",
    "dep:thiserror",
    "dep:tracing",
]
player = [
    "serde",

    "dep:arc-swap",
    "dep:tokio",
    "dep:futures-util",
    "dep:namespaced-tmp",
    "dep:libmpv",
    "dep:cli-daemon",
    "dep:thiserror",
    "dep:tracing",
]
playlist = [
    "player",

    "dep:csv-async",
    "dep:dirs",
    "dep:memchr",
]
queue = [
    "playlist",
    "player",
]
downloads = [
    "queue",
    "ytdl",

    "dep:glob",
]
serde = ["dep:serde"]
