[package]
name = "mlib"
version = "0.9.4"
edition = "2021"

[dependencies]
arc-swap = { version = "1.7.1", optional = true }
async_once = { workspace = true , optional = true }
base64 = { workspace = true , optional = true }
chrono = { version = "0.4.38", optional = true }
cli-daemon = { workspace = true, optional = true }
csv-async = { version = "1.3.0", features = ["tokio"], optional = true }
dirs = { workspace = true, optional = true }
form_urlencoded = { version = "1.2.1", default-features = false }
futures-util = { workspace = true, optional = true }
glob = { version = "0.3.1", optional = true }
libmpv = { git = "https://github.com/sirno/libmpv-rs", optional = true, branch = "upgrade-libmpv" }
memchr = { workspace = true, optional = true }
mpris-server = { version = "0.8.0", optional = true }
namespaced-tmp = { workspace = true, optional = true }
once_cell.workspace = true
parking_lot = { version = "0.12.2", optional = true }
pin-project = { version = "1.1.5", optional = true }
raii_flock = { version = "0.2.0", optional = true }
regex.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde-map-to-array = { version = "1.1.1", features = ["std"], optional = true }
serde_json = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { version = "1.0.61", optional = true }
tokio-stream = { workspace = true, features = ["fs", "io-util"], optional = true }
tracing = { workspace = true, optional = true }
url = { version = "2.5.0", features = ["serde"] }
whoami = { workspace = true, optional = true }
zbus = { version = "4.2.1", default-features = false, optional = true, features = ["tokio"] }

[dependencies.tokio]
workspace = true
features = ["process"]
optional = true

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }
tracing-log.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["net", "fs", "process", "rt", "io-util", "macros", "rt-multi-thread"]

[[example]]
name = "observe"
required-features = ["player"]

[features]
ytdl = [
    "dep:base64",
    "dep:futures-util",
    "dep:namespaced-tmp",
    "dep:pin-project",
    "dep:thiserror",
    "dep:tokio",
    "dep:tokio-stream",
]
player = [
    "serde",
    "player-connection",

    "dep:libmpv",
    "tokio/io-util",
]
player-connection = [
    "serde",

    "dep:arc-swap",
    "dep:cli-daemon",
    "dep:futures-util",
    "dep:namespaced-tmp",
    "dep:thiserror",
    "dep:tokio",
    "dep:tracing",
]
statistics = [
    "serde",

    "dep:chrono",
    "dep:dirs",
    "dep:raii_flock",
    "dep:serde-map-to-array",
    "dep:serde_json",
    "dep:tempfile",
    "dep:tracing",
    "tokio/fs",
]
playlist = [
    "serde",

    "dep:csv-async",
    "dep:dirs",
    "dep:futures-util",
    "dep:memchr",
    "dep:thiserror",
    "dep:tokio",
]
queue = [
    "playlist",
    "player-connection",
]
downloads = [
    "queue",
    "ytdl",

    "dep:glob",
]
serde = ["dep:serde"]
mpris = [
    "dep:mpris-server",
    "dep:zbus",
]
default = [
    "downloads",
    "player",
    "playlist",
    "queue",
    "statistics",
    "ytdl",
]
