[package]
name = "jukebox"
version = "0.1.0"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2018"

[features]
default = []
jni_lib = ["jni"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
once_cell = "1"
itertools = "0.9"
tokio-util = { version = "0.3", features = ["codec"] }
parking_lot = "0.11"
crossbeam = "0.7"
socket2 = "0.3"

[dependencies.tokio]
version = "0.2"
features = ["io-util", "io-std", "tcp", "process", "rt-core", "stream", "rt-threaded", "macros", "sync" ]

[target.aarch64-linux-android.dependencies]
jni = { version = "0.17", default-features = false, optional = true }
[target.armv7-linux-androidabi.dependencies]
jni = { version = "0.17", default-features = false, optional = true }
[target.i686-linux-android.dependencies]
jni = { version = "0.17", default-features = false, optional = true }

[lib]
name = "jukebox"
crate-type = ["rlib", "dylib"]
required-features = ["jni_lib"]


# [target.aarch64-linux-android]
# ar = "../app/NDK/arm64/bin/aarch64-linux-android-ar"
# linker = "../app/NDK/arm64/bin/aarch64-linux-android-clang"

# [target.armv7-linux-androideabi]
# ar = "../app/NDK/arm/bin/arm-linux-androideabi-ar"
# linker = "../app/NDK/arm/bin/arm-linux-androideabi-clang"

# [target.i686-linux-android]
# ar = "../app/NDK/x86/bin/i686-linux-android-ar"
# linker = "../app/NDK/x86/bin/i686-linux-android-clang"
